--- a/package.json
+++ b/package.json
@@ -6,8 +6,18 @@
   "author": "YVES Narson Kevine",
   "main": "server.mjs",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "express",
+    "sequelize",
+    "sqlite",
+    "blagues",
+    "api"
+  ],
+
   "dependencies": {
     "express": "^5.1.0",
     "sequelize": "^6.37.7",
