--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "license": "ISC",
   "author": "YVES Narson Kevine",
   "main": "server.mjs",
+  "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "node server.mjs",
+    "dev": "nodemon server.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
