config variables environment

--- a/.env.exemple
+++ b/.env.exemple
@@ -1,4 +1,11 @@
+# Configuration du serveur
 PORT=3001
-DATABASE_URL="sqlite:./db.sqlite"
-NODE_ENV=production
-SECRET_API_KEY="uneCleUltraSecrete"
+NODE_ENV=development
+
+# Configuration de la base de données
+DB_DIALECT=sqlite
+DB_STORAGE=./path/to/database.sqlite
+DB_LOGGING=false
+
+# Configuration de l'API
+API_PREFIX=/api/v1
